[package]
name = "byte_arithmetic"
version = "0.2.1"
edition = "2021"
description = "Implementation of simple arithmetic on byte-like objects"
license = "Unlicense"
exclude = [".idea/*"]
readme = "README.md"
documentation = "https://github.com/lissahyacinth/byte_arithmetic"

[dependencies]
itertools = "0.10"