[package]
name = "byte_arithmetic"
version = "0.3.1"
edition = "2021"
description = "Implementation of simple arithmetic on byte-like objects"
license = "Unlicense"
exclude = [".idea/*"]
readme = "README.md"
documentation = "https://gitlab.com/shareableai/byte_arithmetic"

[dependencies]
itertools = "0.10"
serde = {version="1.0.145", features=["derive"]}